SERVER-36576 Restore ostream formatters after change